test/tests/ReassignDef.expected
ReassignDef.frost:3:5: error: cannot assign to already-assigned def 'a'
ReassignDef.frost:9:5: error: cannot assign to already-assigned def 'b'
2 errors
